DB 및 Thymeleaf 관련 설정

--- a/posleep/src/main/resources/application.properties
+++ b/posleep/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=posleep
+
+# --- DataSource ---
+spring.datasource.url=jdbc:mariadb://localhost:3306/posleep
+spring.datasource.username=posleep_dev
+spring.datasource.password=0907
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# --- JPA/Hibernate ---
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+
+# --- Thymeleaf ---
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
+spring.thymeleaf.check-template-location=true
