Logging 추가 및 Entity 변경 (enum(Y,N) → boolean)

--- a/posleep/src/main/resources/application.properties
+++ b/posleep/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 spring.thymeleaf.check-template-location=true
+
+# --- LOG ---
+logging.level.com.syun.posleep=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+spring.jpa.properties.hibernate.format_sql=true
