Logging 리팩터링 (주요 비즈니스 로직 외 log.info 제거 및 AOP 기반 공통 로깅 적용)

--- a/posleep/src/main/resources/application.properties
+++ b/posleep/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.thymeleaf.check-template-location=true
 # --- LOG ---
 logging.level.com.syun.posleep=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.orm.jdbc.bind=TRACE
+#logging.level.org.hibernate.orm.jdbc.bind=TRACE
 spring.jpa.properties.hibernate.format_sql=true
