--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: CI-CD
+name: backend-ci-cd
 
 on:
   push:
@@ -6,17 +6,71 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE_NAME: syun32/posleep
+  REGISTRY: docker.io
+  IMAGE_NAME: syun32/posleep-api
   IMAGE_TAG: prod
 
+concurrency:
+  group: backend-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  build-and-push:
+  test-backend:
+    name: Test (Gradle)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # (멀티스테이지 Dockerfile이 빌드까지 처리한다는 전제)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: "17"
+
+      # Pick Gradle wrapper location dynamically (backend/gradlew or ./gradlew)
+      - name: Pick Gradle wrapper (root or backend)
+        id: pick
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ -x backend/gradlew ]; then
+            echo "wrapper=backend/gradlew" >> $GITHUB_OUTPUT
+            echo "args=" >> $GITHUB_OUTPUT
+            echo "Using backend/gradlew"
+          elif [ -x gradlew ]; then
+            echo "wrapper=./gradlew" >> $GITHUB_OUTPUT
+            echo "args=-p backend" >> $GITHUB_OUTPUT
+            echo "Using root ./gradlew with -p backend"
+          else
+            echo "Gradle wrapper not found (backend/gradlew or ./gradlew missing)"
+            exit 1
+          fi
+
+      - name: Make wrapper executable
+        run: chmod +x "${{ steps.pick.outputs.wrapper }}"
+
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Run tests
+        run: ${{ steps.pick.outputs.wrapper }} --no-daemon ${{ steps.pick.outputs.args }} clean test
+
+  build-and-push-backend:
+    name: Build & Push Docker (Backend)
+    needs: test-backend
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -26,58 +80,16 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push (posleep module)
+      - name: Build & push
         uses: docker/build-push-action@v6
         with:
-          context: ./posleep
-          file: ./posleep/Dockerfile
-          platforms: linux/amd64
+          context: .
+          file: backend/Dockerfile
           push: true
           tags: |
-            ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-            ${{ env.IMAGE_NAME }}:${{ github.sha }}
-
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout (to get compose file)
-        uses: actions/checkout@v4
-
-      - name: Upload docker-compose.yml to EC2
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}           # -----BEGIN OPENSSH PRIVATE KEY-----
-          source: "deploy/docker-compose.yml"
-          target: "/opt/posleep/"
-
-      - name: SSH Deploy on EC2
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            set -e
-            cd /opt/posleep
-
-            # docker-compose.yml 위치 표준화
-            if [ -f /opt/posleep/deploy/docker-compose.yml ]; then
-              mv -f /opt/posleep/deploy/docker-compose.yml /opt/posleep/docker-compose.yml
-              rmdir /opt/posleep/deploy 2>/dev/null || true
-            fi
-
-            # Private repo면 로그인 필요
-            if [ -n "${{ secrets.DOCKERHUB_USERNAME }}" ] && [ -n "${{ secrets.DOCKERHUB_TOKEN }}" ]; then
-              docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_TOKEN }}"
-            fi
-
-            # 최신 이미지 pull 후 재기동
-            docker pull ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-            docker compose down || true
-            docker compose up -d
-
-            # 오래된 이미지 정리
-            docker image prune -f
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
+          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
+          build-args: |
+            GIT_SHA=${{ github.sha }}
