--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,21 @@
-# ---------- Build stage: Gradle + JDK 17 ----------
+# ---------- Build stage: Gradle (project located at /workspace/backend) ----------
 FROM gradle:8.7.0-jdk17 AS build
 WORKDIR /workspace
 
-# Copy only Gradle wrapper and build scripts first for better layer caching
-COPY backend/gradlew backend/gradlew.bat ./
-COPY backend/gradle ./gradle
-COPY backend/build.gradle* backend/settings.gradle* ./
+# Create project directory
+RUN mkdir -p /workspace/backend
 
-# Pre-fetch dependencies (will be cached as long as build scripts don't change)
-RUN chmod +x ./gradlew && ./gradlew --no-daemon dependencies || true
+# Copy only Gradle build scripts first for better cache reuse
+COPY backend/build.gradle /workspace/backend/
+
+# Pre-fetch dependencies for caching
+RUN gradle -p backend --no-daemon dependencies || true
 
 # Copy actual source
-COPY backend/src ./src
+COPY backend/src /workspace/backend/src
 
 # Build the bootable jar
-RUN ./gradlew --no-daemon clean bootJar
+RUN gradle -p backend --no-daemon clean bootJar
 
 # ---------- Runtime stage: slim JRE 17 ----------
 FROM eclipse-temurin:17-jre-alpine AS runtime
@@ -25,7 +26,7 @@ RUN addgroup -S app && adduser -S app -G app
 WORKDIR ${APP_HOME}
 
 # Copy jar from build stage
-COPY --from=build /workspace/build/libs/*.jar ${APP_HOME}/app.jar
+COPY --from=build /workspace/backend/build/libs/*.jar ${APP_HOME}/app.jar
 
 # Optional: healthcheck (enable if Actuator is on)
 # HEALTHCHECK --interval=30s --timeout=3s --start-period=30s --retries=3 CMD wget -qO- http://localhost:8080/actuator/health | grep -q '"status":"UP"' || exit 1
