--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -4,28 +4,46 @@ services:
     image: syun32/posleep-api:prod
     container_name: posleep-api
     env_file: .env
-    ports:
-      - "8080:8080"
+    expose:
+      - "8080"
     restart: unless-stopped
     environment:
       - JAVA_OPTS=-XX:MaxRAMPercentage=75 -XX:+UseG1GC
       - TZ=Asia/Seoul
+    networks:
+      - posleep-net
 
-  # ----- prepare for FE -----
-  # web:
-  #   image: syun32/posleep-web:prod
-  #   container_name: posleep-web
-  #   ports:
-  #     - "3000:3000"
-  #   restart: unless-stopped
+  frontend:
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    image: syun32/posleep-frontend:prod
+    container_name: posleep-frontend
+    expose:
+      - "3000"
+    restart: unless-stopped
+    environment:
+      - NEXT_PUBLIC_API_BASE_URL=http://api:8080
+      - TZ=Asia/Seoul
+    networks:
+      - posleep-net
+    depends_on:
+      - api
 
-  # nginx:
-  #   image: nginx:1.27-alpine
-  #   container_name: posleep-nginx
-  #   volumes:
-  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-  #   ports:
-  #     - "80:80"
-  #   depends_on:
-  #     - api
-  #     - web
+  nginx:
+    image: nginx:1.27-alpine
+    container_name: posleep-nginx
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - "80:80"
+    restart: unless-stopped
+    depends_on:
+      - frontend
+      - api
+    networks:
+      - posleep-net
+
+networks:
+  posleep-net:
+    driver: bridge
