--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -1,17 +1,36 @@
-events {}
+worker_processes auto;
+
+events { worker_connections 1024; }
+
 http {
+  upstream frontend {
+    server posleep-frontend:3000;
+  }
+
+  upstream api {
+    server posleep-api:8080;
+  }
+
   server {
     listen 80;
     server_name _;
 
-    location /api/ {
-      proxy_pass http://api:8080/api/;
+    # Next.js 프론트
+    location / {
+      proxy_pass http://frontend;
       proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location / {
-      proxy_pass http://web:3000;
+    # Spring Boot API
+    location /api/ {
+      proxy_pass http://api/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
   }
 }
