--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: backend-ci-cd
+name: ci-cd
 
 on:
   push:
@@ -9,6 +9,8 @@ env:
   REGISTRY: docker.io
   IMAGE_NAME: syun32/posleep-api
   IMAGE_TAG: prod
+  FRONTEND_IMAGE_NAME: syun32/posleep-frontend
+  FRONTEND_IMAGE_TAG: prod
 
 concurrency:
   group: backend-${{ github.ref }}
@@ -99,9 +101,39 @@ jobs:
           build-args: |
             GIT_SHA=${{ github.sha }}
 
+  build-and-push-frontend:
+    name: Build & Push Docker (Frontend)
+    runs-on: ubuntu-latest
+    needs: test-backend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build & push (multi-arch)
+        uses: docker/build-push-action@v6
+        with:
+          context: ./frontend
+          file: frontend/Dockerfile
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ env.FRONTEND_IMAGE_TAG }}
+            ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ github.sha }}
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}:buildcache
+          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}:buildcache,mode=max
+
   deploy:
     name: Deploy to EC2
-    needs: build-and-push-backend
+    needs: [build-and-push-backend, build-and-push-frontend]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
