--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -14,3 +14,7 @@ spring.jpa.open-in-view=false
 logging.level.com.syun.posleep=INFO
 logging.level.org.hibernate.SQL=INFO
 spring.jpa.properties.hibernate.format_sql=true
+
+# --- File Size ---
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
