--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,7 @@ logging.level.com.syun.posleep=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.orm.jdbc.bind=TRACE
 spring.jpa.properties.hibernate.format_sql=true
+
+# --- File Size ---
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
