#10 API key 값 관련 환경변수 설정 개선

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,7 +3,10 @@ services:
   api:
     image: syun32/posleep-api:prod
     container_name: posleep-api
-    env_file: .env
+    env_file:
+      - /opt/posleep/app.env
+    volumes:
+      - /opt/posleep/keys:/opt/posleep/keys:ro
     expose:
       - "8080"
     restart: unless-stopped
