#12 User 테이블 생성 및 로그인/인증 기능 구현

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -18,3 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # --- File Size ---
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# --- JWT ---
+jwt.secret=THIS_IS_VERY_SECRET_KEY_CHANGE_ME_ABCDEF1234567890
+jwt.expiration-ms=86400000
